--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,26 +5,10 @@ description: "A new Flutter project."
 publish_to: 'none' 
 
 
-
-
-
-
-
-
-
-
-
-
-
 version: 1.0.0+1
 
 environment:
   sdk: ^3.7.0
-
-
-
-
-
 
 
 dependencies:
@@ -45,18 +29,13 @@ dev_dependencies:
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
 
-  
-  
-  
-  
-  
+
   flutter_lints: ^5.0.0
 
 
-
-
-
 flutter:
+  assets:
+    - assets/images/
 
   
   
